--- a/src/app/personnels/manager-catalog/catalog-academic-rank/catalog-academic-rank.component.html
+++ b/src/app/personnels/manager-catalog/catalog-academic-rank/catalog-academic-rank.component.html
@@ -1,26 +1,62 @@
 <h4 class="text-center mgb-15" style="font-size: 20px"> Danh mục học hàm </h4>
+
+<div class="row">
+  <div class="col-xs-12 text-right">
+    <div class="col-xs-6">
+      <div class="row">
+        <div class="col-xs-12 col-sm-3 text-left">
+          Số lượng xem:
+        </div>
+        <div class="col-xs-12 col-sm-8 text-left">
+          <select name="" id="" class="form-control" [(ngModel)]="numberShow">
+            <option value="10">10</option>
+            <option value="20">20</option>
+            <option value="30">30</option>
+            <option value="30">50</option>
+            <option value="30">100</option>
+            <option value="30">150</option>
+          </select>
+        </div>
+      </div>
+    </div>
+    <div class="col-xs-6">
+      <input type="text" placeholder="Nhập để tìm kiếm " class="form-control search" name="search" #query ngModel
+             (keyup)="onSearch(query)"
+             (change)="onSearch(query)">
+    </div>
+  </div>
+</div>
+
+
 <div *ngIf="message.condition"
      [ngClass]="'alert alert-'+ message.type">
   {{message.content}}
 </div>
 <div class="table-responsive">
-  <table class="table table-bordered">
+  <table class="table table-bordered" [mfData]="list.toArray()" #mfDetail="mfDataTable" [mfRowsOnPage]="numberShow">
     <thead>
     <tr>
       <th style="width:5%">STT</th>
-      <th style="width:70%" class="name">Tên học hàm</th>
+      <th style="width:70%" class="name">
+        <mfDefaultSorter by="name">Tên học hàm</mfDefaultSorter>
+      </th>
       <th style="width:10%">
         <span class="action-icon" (click)="openModals()"><i class="fa fa-plus"></i></span>
       </th>
     </tr>
     </thead>
     <tbody>
-    <tr *ngFor="let item of list.toArray();let i = index ">
+    <tr *ngFor="let item of mfDetail.data;let i = index ">
       <td>{{i+1}}</td>
       <td class="name">{{item.name}}</td>
       <td style="width:10%">
         <span class="action-icon" (click)="editItem(item)"><i class="fa fa-edit"></i></span>
         <span class="action-icon" (click)="removeItem(item)"><i class="fa fa-remove"></i></span>
+      </td>
+    </tr>
+    <tr *ngIf="numberShow >= mfDetail.data.length && (list.size() - mfDetail.data.length) >=numberShow">
+      <td colspan="3">
+        <mfBootstrapPaginator></mfBootstrapPaginator>
       </td>
     </tr>
     </tbody>
@@ -42,7 +78,7 @@
         <div class="col-xs-12">
           <div class="item-control">
             <label>Tên học hàm </label>
-            <input name="inputData"  class="form-control" [(ngModel)]="inputData" style="width: 100%!important;"/>
+            <input name="inputData" class="form-control" [(ngModel)]="inputData" style="width: 100%!important;"/>
           </div>
         </div>
       </div>
