--- a/src/app/personnels/manager-catalog/catalog-faculty/catalog-faculty.component.css
+++ b/src/app/personnels/manager-catalog/catalog-faculty/catalog-faculty.component.css
@@ -1,11 +1,23 @@
-select{
+select {
   float: none !important;
 }
+
 tbody tr:hover {
   background-color: #eae7df;
   cursor: pointer;
 }
 
-tbody tr td{
+tbody tr td {
   word-break: break-all;
+}
+
+.search {
+  display: inline-block;
+  margin-left: auto;
+  width: 300px !important;
+  margin-bottom: 20px;
+}
+
+input.ng-valid {
+  border: 1px solid #444444 ;
 }
