--- a/src/app/personnels/info-person/process-teaching/process-teaching.component.html
+++ b/src/app/personnels/info-person/process-teaching/process-teaching.component.html
@@ -38,8 +38,10 @@
           <td>{{nationalService.getNationalByCode(nationals,item.languageTeaching).name}}</td>
           <td class="hide-print">
             <span class="action-icon" (click)="editItem(i)"><i class="fa fa-edit"></i></span>
-            <span class="action-icon" (click)="removeItem(i)"><i class="fa fa-remove "></i></span>
-            <span class="action-icon"><i class="fa fa-lock"></i></span>
+            <!--<span class="action-icon" (click)="removeItem(i)"><i class="fa fa-remove "></i></span>-->
+            <span class="action-icon" (click)="confirmDiaglog.open();itemDelete = i"><i class="fa fa-remove "></i></span>
+
+            <!--<span class="action-icon"><i class="fa fa-lock"></i></span>-->
           </td>
         </tr>
         <!---->
@@ -141,3 +143,4 @@
   </modal-footer>
 
 </modal>
+<app-alert-confirm #confirmDiaglog (onAction)="confirm($event)"></app-alert-confirm>
