--- a/src/app/personnels/info-person/publish-info/publish-info.component.html
+++ b/src/app/personnels/info-person/publish-info/publish-info.component.html
@@ -33,7 +33,8 @@
           <td>{{item.role}}</td>
           <td class="hide-print">
             <span class="action-icon" (click)="editItem(item)"><i class="fa fa-edit"></i></span>
-            <span class="action-icon" (click)="removeItem(i)"><i class="fa fa-remove "></i></span>
+            <!--<span class="action-icon" (click)="removeItem(i)"><i class="fa fa-remove "></i></span>-->
+            <span class="action-icon" (click)="confirmDiaglog.open();itemDelete = i"><i class="fa fa-remove "></i></span>
           </td>
         </tr>
 
@@ -103,3 +104,7 @@
   </modal-footer>
 
 </modal>
+
+
+
+<app-alert-confirm #confirmDiaglog (onAction)="confirm($event)"></app-alert-confirm>
