--- a/src/app/personnels/manager-catalog/catalog-faculty/catalog-faculty.component.html
+++ b/src/app/personnels/manager-catalog/catalog-faculty/catalog-faculty.component.html
@@ -1,30 +1,7 @@
 <h4 class="text-center mgb-15" style="font-size: 20px"> Danh mục khoa, phòng ban </h4>
 
-<div class="row">
-  <div class="col-xs-12 text-right">
-    <div class="col-xs-6">
-      <div class="row">
-        <div class="col-xs-12 col-sm-3 text-left">
-          Số lượng xem:
-        </div>
-        <div class="col-xs-12 col-sm-8 text-left">
-          <select name="" id="" class="form-control" [(ngModel)]="numberShow">
-            <option value="10">10</option>
-            <option value="20">20</option>
-            <option value="30">30</option>
-            <option value="30">50</option>
-            <option value="30">100</option>
-            <option value="30">150</option>
-          </select>
-        </div>
-      </div>
-    </div>
-    <div class="col-xs-6">
-      <input type="text" placeholder="Nhập để tìm kiếm " class="form-control search" name="search" #query ngModel (keyup)="onSearch(query)"
-             (change)="onSearch(query)">
-    </div>
-  </div>
-</div>
+<app-catalog-search (textChange)="textChangeListener($event)"
+                    (numberViewChange)="numberViewChangeListener($event)"></app-catalog-search>
 
 <div class="table-responsive" id="catalog-faculty">
   <table class="table table-bordered" [mfData]="listParent.toArray()" #mf="mfDataTable" [mfRowsOnPage]="numberShow">
@@ -55,7 +32,8 @@
         <span class="action-icon" title="Chi tiết " (click)="viewDetail(item)"><i class="fa fa-eye"
                                                                                   aria-hidden="true"></i></span>
         <span class="action-icon" title="Chỉnh sửa " (click)="editItem(item)"><i class="fa fa-edit"></i></span>
-        <span class="action-icon" title="Xóa " (click)="removeItem(item)"><i class="fa fa-remove"></i></span>
+        <span class="action-icon" (click)="confirmDiaglog.open();itemDelete = item"><i class="fa fa-remove "></i></span>
+        <!--<span class="action-icon" title="Xóa " (click)="removeItem(item)"><i class="fa fa-remove"></i></span>-->
       </td>
     </tr>
     <td colspan="5">
@@ -202,7 +180,9 @@
               <td class="name first-upper-case">{{item.name.toLowerCase()}}</td>
               <td style="width:10%">
                 <span class="action-icon" (click)="editItem(item)"><i class="fa fa-edit"></i></span>
-                <span class="action-icon" (click)="removeItem(item)"><i class="fa fa-remove"></i></span>
+                <!--<span class="action-icon" (click)="removeItem(item)"><i class="fa fa-remove"></i></span>-->
+
+                <span class="action-icon" (click)="confirmDiaglog.open();itemDelete = item"><i class="fa fa-remove "></i></span>
               </td>
             </tr>
             <td colspan="4" *ngIf="numberShow >= mfDetail.data.length && (details.size() - mfDetail.data.length) >=numberShow">
@@ -268,3 +248,5 @@
   </modal-footer>
 
 </modal>
+
+<app-alert-confirm #confirmDiaglog (onAction)="confirm($event)"></app-alert-confirm>
