--- a/src/app/components/tabs/tab-left/tab-left.component.html
+++ b/src/app/components/tabs/tab-left/tab-left.component.html
@@ -17,7 +17,8 @@
 
         <div id="app" class="tab-pane fade in active" *ngIf="isLogin">
           <ul class="content">
-            <li *ngFor="let item of menuApp | orderBy:'title';let i = index">
+            <!--*ngFor="let item of menuApp | orderBy:'title';let i = index"-->
+            <li >
               <!--<a routerLinkActive="active"  *ngFor="let item of menuApp" [routerLink]="item.href" (click)="openMenu(item)">{{item.title}}</a>-->
 
               <a style="cursor: pointer"
@@ -26,9 +27,9 @@
                  (click)="openMenu2(item,'#menu-app-item-role-' + i)"
                  [id]="'menu-app-item-role-' + i">{{item.title.toLowerCase()!=getMyCvTitle().toLowerCase()?item.title.toLowerCase():item.title}}</a>
 
-              <a style="cursor: pointer"
-                 (click)="openMenu2(item,'#menu-app-item-role-' + i)"
-                 [id]="'menu-app-item-role-' + i">{{item.title}}</a>
+              <!--<a style="cursor: pointer"-->
+                 <!--(click)="openMenu2(item,'#menu-app-item-role-' + i)"-->
+                 <!--[id]="'menu-app-item-role-' + i">{{item.title}}</a>-->
             </li>
             <li *ngIf="menuApp.length == 0">
               <a>
