--- a/src/app/personnels/info-person/contract/contract.component.html
+++ b/src/app/personnels/info-person/contract/contract.component.html
@@ -39,8 +39,9 @@
           <td>{{item.job}}</td>
           <td class="hide-print">
             <span class="action-icon" (click)="editItem(i)"><i class="fa fa-edit"></i></span>
-            <span class="action-icon" (click)="removeItem(i)"><i class="fa fa-remove "></i></span>
+            <!--<span class="action-icon" (click)="removeItem(i)"><i class="fa fa-remove "></i></span>-->
             <!--<span class="action-icon"><i class="fa fa-lock"></i></span>-->
+            <span class="action-icon" (click)="confirmDiaglog.open();itemDelete = item"><i class="fa fa-remove "></i></span>
           </td>
         </tr>
         <!---->
@@ -138,6 +139,7 @@
 
 </modal>
 
+<app-alert-confirm #confirmDiaglog (onAction)="confirm($event)"></app-alert-confirm>
 
 
 <!--print-->
