--- a/src/app/personnels/info-person/emulation-title/emulation-title.component.html
+++ b/src/app/personnels/info-person/emulation-title/emulation-title.component.html
@@ -30,7 +30,10 @@
           <td>{{item.numberDecide}}</td>
           <td class="hide-print">
             <span class="action-icon" (click)="editItem(item)"><i class="fa fa-edit"></i></span>
-            <span class="action-icon" (click)="removeItem(i)"><i class="fa fa-remove "></i></span>
+            <!--<span class="action-icon" (click)="removeItem(i)"><i class="fa fa-remove "></i></span>-->
+
+            <span class="action-icon" (click)="confirmDiaglog.open();itemDelete = i"><i class="fa fa-remove "></i></span>
+
             <!--<span class="action-icon" ><i class="fa fa-lock"></i></span>-->
           </td>
         </tr>
@@ -88,3 +91,4 @@
   </modal-footer>
 
 </modal>
+<app-alert-confirm #confirmDiaglog (onAction)="confirm($event)"></app-alert-confirm>
