--- a/src/app/personnels/info-person/language-teachnoly-politic/foreign-language/foreign-language.component.html
+++ b/src/app/personnels/info-person/language-teachnoly-politic/foreign-language/foreign-language.component.html
@@ -36,7 +36,8 @@
           <td>{{item.branch}}</td>
           <td class="hide-print">
             <span class="action-icon" (click)="editItem(item)"><i class="fa fa-edit"></i></span>
-            <span class="action-icon" (click)="removeItem(item)"><i class="fa fa-remove"></i></span>
+            <!--<span class="action-icon" (click)="removeItem(item)"><i class="fa fa-remove"></i></span>-->
+            <span class="action-icon" (click)="confirmDiaglog.open();itemDelete = item"><i class="fa fa-remove "></i></span>
             <!--<span class="action-icon"><i class="fa fa-lock"></i></span>-->
           </td>
         </tr>
@@ -152,3 +153,4 @@
 
 </modal>
 
+<app-alert-confirm #confirmDiaglog (onAction)="confirm($event)"></app-alert-confirm>
