--- a/src/app/personnels/info-person/language-teachnoly-politic/info-technology/info-technology.component.html
+++ b/src/app/personnels/info-person/language-teachnoly-politic/info-technology/info-technology.component.html
@@ -31,7 +31,8 @@
           <td>{{item.yearLicense}}</td>
           <td class="hide-print">
             <span class="action-icon" (click)="editItem(item)"><i class="fa fa-edit"></i></span>
-            <span class="action-icon" (click)="removeItem(i)"><i class="fa fa-remove "></i></span>
+            <!--<span class="action-icon" (click)="removeItem(i)"><i class="fa fa-remove "></i></span>-->
+            <span class="action-icon" (click)="confirmDiaglog.open();itemDelete = i"><i class="fa fa-remove "></i></span>
             <!--<span class="action-icon" ><i class="fa fa-lock"></i></span>-->
           </td>
         </tr>
@@ -90,3 +91,4 @@
 </modal>
 
 
+<app-alert-confirm #confirmDiaglog (onAction)="confirm($event)"></app-alert-confirm>
