--- a/src/app/personnels/info-person/process-evention/process-evention.component.html
+++ b/src/app/personnels/info-person/process-evention/process-evention.component.html
@@ -36,7 +36,8 @@
           <td>{{item.description}}</td>
           <td class="hide-print">
             <span class="action-icon" (click)="editItem(item)"><i class="fa fa-edit"></i></span>
-            <span class="action-icon" (click)="removeItem(i)"><i class="fa fa-remove "></i></span>
+            <!--<span class="action-icon" (click)="removeItem(i)"><i class="fa fa-remove "></i></span>-->
+            <span class="action-icon" (click)="confirmDiaglog.open();itemDelete = i"><i class="fa fa-remove "></i></span>
           </td>
         </tr>
         <!---->
@@ -117,3 +118,5 @@
   </modal-footer>
 
 </modal>
+
+<app-alert-confirm #confirmDiaglog (onAction)="confirm($event)"></app-alert-confirm>
