--- a/src/app/personnels/info-person/process-work/process-work.component.html
+++ b/src/app/personnels/info-person/process-work/process-work.component.html
@@ -39,7 +39,8 @@
                   <td>{{item.job}}</td>
                   <td class="hide-print">
                     <span class="action-icon" (click)="editItem(item)"><i class="fa fa-edit"></i></span>
-                    <span class="action-icon" (click)="removeItem(i)"><i class="fa fa-remove "></i></span>
+                    <!--<span class="action-icon" (click)="removeItem(i)"><i class="fa fa-remove "></i></span>-->
+                    <span class="action-icon" (click)="confirmDiaglog.open();itemDelete = i"><i class="fa fa-remove "></i></span>
                   </td>
                 </tr>
                 </tbody>
@@ -160,3 +161,4 @@
 
 
 
+<app-alert-confirm #confirmDiaglog (onAction)="confirm($event)"></app-alert-confirm>
