--- a/src/app/personnels/info-person/salary-brief/salary-brief.component.html
+++ b/src/app/personnels/info-person/salary-brief/salary-brief.component.html
@@ -45,7 +45,8 @@
                 </td> -->
                 <td class="hide-print">
                   <span class="action-icon" (click)="editItem(item)"><i class="fa fa-edit"></i></span>
-                  <span class="action-icon" (click)="removeItem(i)"><i class="fa fa-remove"></i></span>
+                  <!--<span class="action-icon" (click)="removeItem(i)"><i class="fa fa-remove"></i></span>-->
+                  <span class="action-icon" (click)="confirmDiaglog.open();itemDelete = i"><i class="fa fa-remove "></i></span>
                   <!--   <span class="action-icon" (click)="blockItem(i)"><i class="fa fa-lock"></i></span> -->
                 </td>
               </tr>
@@ -160,3 +161,4 @@
 
 </modal>
 
+<app-alert-confirm #confirmDiaglog (onAction)="confirm($event)"></app-alert-confirm>
