--- a/src/app/personnels/info-person/science-topic/science-topic.component.html
+++ b/src/app/personnels/info-person/science-topic/science-topic.component.html
@@ -42,7 +42,8 @@
               <td>{{item.specieObtain}}</td>
               <td class="hide-print">
                 <span class="action-icon" (click)="editItem(item)"><i class="fa fa-edit"></i></span>
-                <span class="action-icon" (click)="removeItem(i)"><i class="fa fa-remove "></i></span>
+                <!--<span class="action-icon" (click)="removeItem(i)"><i class="fa fa-remove "></i></span>-->
+                <span class="action-icon" (click)="confirmDiaglog.open();itemDelete = i"><i class="fa fa-remove "></i></span>
                 <!--<span class="action-icon"><i class="fa fa-lock"></i></span>-->
               </td>
             </tr>
@@ -144,3 +145,5 @@
   </modal-footer>
 
 </modal>
+
+<app-alert-confirm #confirmDiaglog (onAction)="confirm($event)"></app-alert-confirm>
